Bump LightDB version to 4.33.1, add sbt-assembly plugin, update README dependencies, and configure JMH benchmarks to use fat JARs.